bootcamp_26_bd-dev/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - secretName: ssl
      hosts:
        - a6eb0daff38de43b7a993c7e41f410f8-78b12e5df6f93992.elb.us-east-2.amazonaws.com
  ingressClassName: nginx
  rules:
    - host: a6eb0daff38de43b7a993c7e41f410f8-78b12e5df6f93992.elb.us-east-2.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8090
